--- a/OMDBApiMobileAppsProject/OMDBApiMobileAppsProject/OMDBApiMobileAppsProject.csproj
+++ b/OMDBApiMobileAppsProject/OMDBApiMobileAppsProject/OMDBApiMobileAppsProject.csproj
@@ -106,6 +106,9 @@
       <DependentUpon>MyMovies.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchPage.xaml.cs">
+      <DependentUpon>SearchPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ViewModels\Helpers.cs" />
     <Compile Include="ViewModels\MovieViewModel.cs" />
     <Compile Include="ViewModels\TitleVM.cs" />
@@ -137,6 +140,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="MyMovies.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SearchPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
