--- a/OMDBApiMobileAppsProject/OMDBApiMobileAppsProject/OMDBApiMobileAppsProject.csproj
+++ b/OMDBApiMobileAppsProject/OMDBApiMobileAppsProject/OMDBApiMobileAppsProject.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Converters\ObjectExistsToVisible.cs" />
     <Compile Include="Data\fakeService.cs" />
     <Compile Include="Data\Movie.cs" />
+    <Compile Include="Data\SearchMovieService.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
